# flutter_device_info_plus

./: .gitignore  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
ios/: flutter_device_info_plus.podspec
ios/Classes/: FlutterDeviceInfoPlusPlugin.swift
ios/flutter_device_info_plus/: Package.swift
lib/: flutter_device_info_plus.dart
lib/src/: exceptions.dart  flutter_device_info_plus.dart  platform_interface.dart
lib/src/models/: battery_info.dart  device_information.dart  display_info.dart  memory_info.dart  models.dart  network_info.dart  processor_info.dart  security_info.dart  sensor_info.dart
macos/: flutter_device_info_plus.podspec
macos/Classes/: FlutterDeviceInfoPlusPlugin.swift
macos/flutter_device_info_plus/: Package.swift
test/: flutter_device_info_plus_test.dart
windows/: CMakeLists.txt  flutter_device_info_plus_plugin.cpp  flutter_device_info_plus_plugin.h  flutter_device_info_plus_plugin_c_api.cpp
windows/include/flutter_device_info_plus/: flutter_device_info_plus_plugin_c_api.h
